--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ dependencies = [
     "click==8.1.3",
     "pyfiglet~=0.8.post1",
     "setuptools~=65.5.0",
-    "psycopg2==2.9.9"
+    "pyodbc==5.1.0",
+    "pandas==22.2.3.3",
+    "openpyxl==3.1.5",
+    "numpy==2.1.1"
+
 ]
 
 [tool.pdm]
